--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,9 @@ layout: default
 <div class="post">
 
   <header class="post-header">
+    {% if page.title != 'About' %}
     <h1 class="post-title">{{ page.title }}</h1>
+    {% endif %}
   </header>
 
   <article class="post-content">
