--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,14 @@ pre {
         }
     }
 }
+
+
+.internal {
+  color: inherit;
+  text-decoration: none;
+}
+
+.internal:hover {
+  color: inherit;
+  text-decoration: none;
+}
